<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/dog_house"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_lista_caes"
            android:icon="@drawable/dog_paw"
            android:title="@string/pagina_lista_caes" />
        <item
            android:id="@+id/nav_caes_adoptados"
            android:icon="@drawable/dog_heart"
            android:title="@string/caes_adoptados" />
        <item
            android:id="@+id/nav_passeios"
            android:icon="@drawable/dog_training"
            android:title="@string/pagina_passeios" />
        <item
            android:id="@+id/nav_saude"
            android:icon="@drawable/dog_leash"
            android:title="@string/pagina_saude" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
